Modify bio in config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Wooyoung Lee"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "SW engineer spcializing in autonomous driving sensor fusion"
+  bio              : "SW engineer specializing in autonomous driving tech"
   location         : "Seoul, Republic of Korea"
   email            : "ericlee0829@gmail.com"
   links:
