--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Wooyoung Lee"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "SW engineer specializing in autonomous driving tech"
+  bio              : "SW engineer specializing in autonomous driving tech."
   location         : "Seoul, Republic of Korea"
   email            : "ericlee0829@gmail.com"
   links:
@@ -141,6 +141,8 @@ author:
 # Site Footer
 footer:
   links:
+    - label: "© 2024 Autonomous Fusion Lab. All rights reserved."
+      url: "#"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url:
