--- a/_config.yml
+++ b/_config.yml
@@ -325,3 +325,8 @@ defaults:
       comments: # true
       share: true
       related: true
+
+header:
+  overlay_image: "/assets/images/git_header_image.png" # 배경 이미지 경로
+  overlay_filter: "0.5"  # 0~1 사이 값으로 투명도 조절 (예: 0.5 = 50% 어두워짐)
+  caption: "Autonomous Fusion Lab" # 이미지 위에 표시할 텍스트
